# faeutil

./: .gitignore  aefgen.cpp  explanation.md  meson.build  parse_asm.cpp  parse_cfi.cpp  parse_obj.cpp  spec.cpp  theplan.txt  write_fae.cpp
include/: aef.hpp  avr_reloc.hpp  binary_parsing.hpp  cast.hpp  concat_str.hpp  consume.hpp  elf.hpp  elf_parse.hpp  elf_types.hpp  fae.hpp  io.hpp  macros.hpp  parse.hpp  read_fae.hpp  undef_macros.hpp
include/elf/: elf.hpp  parse.hpp  types.hpp
src/: parse_cfi.cpp  parse_elf.cpp  parse_obj.cpp  read_fae.cpp  test.cpp  write_fae.cpp
src/main/: elftest.cpp  faegen.cpp  gen.cpp  mapper.cpp  read.cpp  readfae.cpp
wrap_scripts/: avr-g++.ps1  avr-g++.sh
